<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/locate_current_position"
                android:icon="@drawable/ic_location"
                android:title="@string/menu_locate_current_position" />
        <item
                android:id="@+id/map_of_galaxy"
                android:icon="@drawable/ic_map"
                android:title="@string/menu_map_of_galaxy"/>
        <item
                android:id="@+id/celestial_bodies_and_satellites"
                android:icon="@drawable/ic_planet"
                android:title="@string/menu_celestial_bodies_and_satellites"/>
        <item
                android:id="@+id/connect_to_stations"
                android:icon="@drawable/ic_connection"
                android:title="@string/menu_connect_to_stations"/>
    </group>

    <item android:title="System">
        <menu>
            <item
                    android:id="@+id/settings"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_settings"/>
            <item
                    android:id="@+id/contact_center"
                    android:icon="@drawable/ic_mail"
                    android:title="@string/menu_write_to_center"/>
        </menu>
    </item>

</menu>
